Opened cells are pink-backgrounded; Clicking on a cell with a bomb causes the end of the game

--- a/MyGame.csproj
+++ b/MyGame.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
+    <None Remove="Content\13.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
